--- a/Todo
+++ b/Todo
@@ -2,4 +2,6 @@ Comments
 1. Any Authentication JWT etc.
 3. If cache is flushed do we need to trigger event to remove data from database.
 4. Maybe need to check duplicate key Doesnot allow them to add. 
+5. Added comments on codebase
+6. Having issues setup mongodb with docker and use. I am fimilar with different ORM like sequelize etc.
 
